--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,3 +30,31 @@
   --chart5-primary: #374151;
   --chart5-secondary: #475569;
 }
+
+/* Personalização da barra de rolagem para navegadores baseados em Webkit */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+  background: var(--card);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--muted);
+  border-radius: 8px;
+  border: 2px solid var(--card);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--primary);
+}
+
+::-webkit-scrollbar-track {
+  background: var(--card);
+  border-radius: 8px;
+}
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--muted) var(--card);
+}
